Cleaned some js. Reviewed Hero section. All SFP.

--- a/_data/sfp.yml
+++ b/_data/sfp.yml
@@ -1,4 +1,4 @@
-intro: "Howdy gals and fellas. I want to make cool things with people who care. Instead of updating my resume, I made you a website."
+intro: "Howdy gals and fellas. I want to make cool things with people who care. Instead of updating my resume, I made you a website. Enjoy your scroll; I look forward to hearing from you soon."
 
 
 content: 
