Refactored SFP content and styles

--- a/_data/sfp.yml
+++ b/_data/sfp.yml
@@ -33,7 +33,7 @@ wow: {
 
 
 thankYou: "# thank you"
-thankYouNote: "Guys and gals of Stormfront Productions, thank you for taking the time to look over my page. Hopefully it demonstrates the skills and desire I can bring to your oustanding team. With my recent move to the area, I am somewhat of a fish out of water. I look forward to hearing from you and becoming a part of a team of quality people who like to build delightful web things. Please enjoy this closing video of me and a my cat saying thanks."
+thankYouNote: "Guys and gals of Stormfront Productions, thank you for taking the time to look over my page. Hopefully it demonstrates the skills and desire I can bring to your oustanding team. With my recent move to the area, I am somewhat of a fish out of water. I look forward to hearing from you and becoming a part of a team of quality people who like to build delightful web things. Please enjoy this closing video of me and a my cat saying thanks. Check out my [portfolio](http://behance.net/nroth10) or my random doodles on [instagram](http://instagram.com/tayox)."
 
 
 faq:
