--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,7 +3,7 @@
 nav:
 - {name: Portfolio, url: 'https://www.behance.net/nroth10'}
 # - {name: Blog, url: '/blog'}
-# - {name: Hire Me, url: '#'}
+- {name: Hire Me, url: '/job'}
 - {name: Contact, url: 'mailto:nroth10@gmail.com'}
 # - {name: Projects, url: '/projects'}
 
@@ -14,7 +14,7 @@ social:
 - {icon: 'twitter', 	link: 'http://twitter.com/tayoxlife'}
 - {icon: 'instagram', link: 'https://instagram.com/tayox'}
 # - {icon: 'dribbble', 	link: 'https://dribbble.com/travisneilson'}
-# - {icon: 'behance', 	link: 'https://www.behance.net/travisneilson'}
+- {icon: 'behance', 	link: 'https://www.behance.net/nroth10'}
 # - {icon: 'youtube', 	link: 'https://www.youtube.com/DevTipsForDesigners'}
 # - {icon: 'linkedin', 	link: 'http://www.linkedin.com/in/travisneilson/'}
 # - {icon: 'facebook', 	link: 'http://www.facebook.com/$username/'}
