--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -31,3 +31,4 @@ contact:
 - {type: email, data: 'nroth10@gmail.com', icon: envelope, url: "mailto:nroth10@gmail.com" }
 
 twitter: tayoxlife
+# portfolio: http://rottenburger.com
